[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/KineticTransitionAnchor/Kinetic Transition Anchor.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/CubicBezier/CubicBezier_MK1/Kinetic Transition Anchor Tail.gd" type="Script" id=2]
[ext_resource path="res://src/CubicBezier/CubicBezier_MK1/Kinetic Transition Anchor Head.gd" type="Script" id=3]
[ext_resource path="res://src/CubicBezier/CubicBezier_MK1/Transition.gd" type="Script" id=4]
[ext_resource path="res://src/ControlAnchor/ControlAnchor.tscn" type="PackedScene" id=5]

[node name="Transition" type="Node2D"]
script = ExtResource( 4 )

[node name="HeadAnchor" parent="." instance=ExtResource( 1 )]
position = Vector2( 137.73, 292.412 )
input_pickable = true
collision_layer = 2
collision_mask = 7
script = ExtResource( 3 )

[node name="P1" parent="." instance=ExtResource( 5 )]
position = Vector2( 147.078, 169.706 )

[node name="P2" parent="." instance=ExtResource( 5 )]
position = Vector2( 260.215, 83.4386 )

[node name="TailAnchor" parent="." instance=ExtResource( 1 )]
position = Vector2( 390.764, 112.637 )
input_pickable = true
collision_layer = 2
collision_mask = 7
script = ExtResource( 2 )
node_idx = 3

[connection signal="move" from="HeadAnchor" to="." method="_on_HeadAnchor_move"]
[connection signal="move" from="TailAnchor" to="." method="_on_TailAnchor_move"]
